# CRUSTy-Core

./: .gitignore  BSAFSS.md  CMakeLists.txt  CMakePresets.json  CRUSTy_Development_Plan.md  LICENSE  Makefile  NSA_Coding_Practices.md  README.md  build-msvc.ps1  build.rs  cbindgen.toml  cleanup_after_rename.ps1  cleanup_unused_files.ps1  convert_md_to_html.py  convert_md_to_pdf.py  directory_rename_summary.md  main.c  open_html_for_pdf.py  organize_files.md  test_uart_after_rename.md
Documentation/: API_REFERENCE.md  CPP_to_Hybrid_Rust_Migration_Guide.md  CRUSTY-Core_System_Design.md  CRUSTy_Development_Plan.md  DEVELOPER_SETUP.md  EMBEDDED_INTEGRATION.md  QEMU_Unified_Guide.md  README.md  README_PDF_CONVERSION.md  RustCppBuildFlow.md  RustCppDataFlow.md  RustCppIntegration.md  RustCppIntegration_Consolidated.md  STM32H573I-DK_Migration_Roadmap.html  STM32H573I-DK_Migration_Roadmap.md  USAGE.md  changelog.md
Documentation/Coding Guidelines/: coding-preferences.md  communication.md  my-stack.md  workflow-prefs.md
Documentation/Core/: API_REFERENCE.md  SYSTEM_DESIGN.md
Documentation/Dev Progress/: NSA_Secure_Coding_Practices.md  STM32H573I-DK_Migration_Roadmap.md  changelog.md  context-summary.md  terminal-output-workaround.md  todo.md
Documentation/Embedded/: EMBEDDED_GUIDE.md  STM32H573I_REFERENCE.md  STM32H573I_Security_Features.md
Documentation/Security/: SECURITY_IMPLEMENTATION.md
MY_RUST_LIB/: Cargo.toml  Makefile  build.rs  cbindgen.toml  main.c
MY_RUST_LIB/include/: my_rust_lib.h
MY_RUST_LIB/src/: lib.rs
arm_toolchain_test/: CMakeLists.txt  main.cpp  minimal.cpp
build_mingw/: Makefile  build_output.txt
build_mingw/crusty_qt_autogen/: deps
build_mingw/qt_ui_autogen/: deps  mocs_compilation.cpp
build_mingw/qt_ui_autogen/O2YQPZALAC/: moc_main_window.cpp  moc_main_window.cpp.d
build_mingw/qt_ui_autogen/S5MZHKY2R4/: qrc_resources.cpp
rust/crypto/: Cargo.toml  build.rs  cbindgen.toml
rust/crypto/src/: lib.rs
src/: main.cpp
src/core/: crypto_interface.h  encryptor.h  file_operations.cpp
src/cpp/: main.cpp  resources.qrc
src/cpp/core/: audit_log.h  crypto_interface.h  encryptor.cpp  encryptor.h  file_operations.cpp  file_operations.h  path_utils.h  secure_utils.h
src/cpp/ui/: main_window.cpp  main_window.h  main_window_constants.h  main_window_impl.cpp  styles.qss
src/ui/: main_window.h
tools/: README.md  command-wrapper.ps1
tools/QEMU Reference/: .env  CMakeLists.txt  README.md  hardware-tool.ps1  main.c  prj.conf  run-qemu.ps1  setup-env-and-build.ps1  setup-qemu.ps1  simple-qemu.ps1
tools/QEMU Reference/boards/: stm32h573i_dk.overlay
tools/QEMU Reference/boards/arm/qemu_stm32h573i_dk/: Kconfig.defconfig  board.yml  qemu_stm32h573i_dk.dts
tools/Zephyr/stm32h573i_dk_app/: CMakeLists.txt  build_log.txt  build_stm32.ps1  prj.conf  qemu_cli.conf  run_minimal_cli.ps1  test_gpio_qemu.cmd  zephyr_diagnostic.ps1
tools/Zephyr/stm32h573i_dk_app/boards/: qemu_cortex_m3.overlay  qemu_cortex_m33.conf  qemu_cortex_m7.conf.bak  stm32h573i_dk.overlay  stm32h573i_dk_qemu.overlay
tools/Zephyr/stm32h573i_dk_app/boards/arm/qemu_stm32h573i_dk/: Kconfig.board
tools/Zephyr/stm32h573i_dk_app/config_archive/: .gitignore  README.md
tools/Zephyr/stm32h573i_dk_app/minimal_app/: CMakeLists.txt  main.c  prj.conf
tools/Zephyr/stm32h573i_dk_app/script_archive/: README.md
tools/Zephyr/stm32h573i_dk_app/src/: crypto_demo.c  crypto_demo.h  crypto_ops.c  crypto_ops.h  gpio_control.c  gpio_control.h  gpio_test.c  gpio_test.h  main.c  mem_protect.c  mem_protect.h  mem_protect_demo.c  mem_protect_demo.h  shell_cmds.c  shell_cmds.h  uart_comm.c  uart_comm.h  uart_demo.c  uart_demo.h
transfer/: MCP_TRANSFER_README.md  transfer_mcp_settings.ps1  transfer_memory_data.ps1
