[package]
name = "rust_crypto"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_crypto"
crate-type = ["staticlib", "rlib"]

[features]
default = ["std"]
std = [
    "aes-gcm/std",
    "argon2/std",
    "rand/std",
    "base64/std",
    "thiserror",
    "anyhow",
]
embedded = [
    "cortex-m",
    "cortex-m-rt",
    "stm32h5",
    "aes-gcm/heapless",
    "rand_core",
    "heapless",
]

[dependencies]
# Core dependencies with conditional std support
aes-gcm = { version = "0.10.1", default-features = false, features = ["aes", "alloc"] }
aes = "0.8.4"
generic-array = "0.14.7"
argon2 = { version = "0.5.0", default-features = false, optional = true }
rand = { version = "0.8.5", default-features = false, optional = true }
rand_core = { version = "0.6.4", default-features = false, features = ["getrandom"], optional = true }
base64 = { version = "0.21.0", default-features = false, optional = true }
thiserror = { version = "1.0.40", default-features = false, optional = true }
anyhow = { version = "1.0.70", optional = true }

# Embedded-specific dependencies
cortex-m = { version = "0.7.7", optional = true }
cortex-m-rt = { version = "0.7.3", optional = true }
stm32h5 = { version = "0.15.1", features = ["stm32h573"], optional = true }
heapless = { version = "0.7.16", optional = true }

[build-dependencies]
cbindgen = "0.24.3"
